<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/cornsilk"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="2dip" >

        <TextView
            android:id="@+id/backtoMainButton"
            android:layout_width="60dip"
            android:layout_height="35dip"
            android:layout_gravity="center_vertical"
            android:background="@color/teal_200"
            android:gravity="center_vertical"
            android:paddingLeft="20dip"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="15sp" >
        </TextView>

        <TextView
            android:layout_width="80dip"
            android:layout_height="50dip"
            android:layout_gravity="center_vertical|center"
            android:gravity="center"
            android:text="@string/set"
            android:textColor="#000000"
            android:textSize="19sp" >
        </TextView>
    </FrameLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/snow" >
 <TextView
    android:layout_width="match_parent"
	android:layout_height="40dip"
	android:paddingLeft="10dp"
	android:gravity="center_vertical|left"
	android:text="@string/message_set"
	android:textColor="#888800"
	android:textSize="15sp"
	android:background="@drawable/tab_bar" />
<!--
<Switch
    android:id="@+id/switch_quiet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:text="@string/quiet"
    android:textColor="#058"
    android:textSize="20sp" />
    -->
<TextView
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:textSize="10sp" />
<Switch
    android:id="@+id/switch_remind"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:text="@string/remind"
    android:textColor="#058"
    android:textSize="20sp"  />
<TextView
    android:layout_width="match_parent"
	android:layout_height="20dip" />

    android:id="@+id/about_revision"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:text="@string/revision"
    android:textSize="20sp"
    android:clickable="true"
    android:textColor="#058"
    android:onClick="click_version" />
<TextView
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:textSize="10sp" />

</LinearLayout>
</LinearLayout>