<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@color/cornsilk"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingRight="2dip" >

        <TextView
                android:id="@+id/backButton2"
                android:layout_width="60dip"
                android:layout_height="35dip"
                android:layout_gravity="center_vertical"
                android:background="@color/teal_200"
                android:gravity="center_vertical"
                android:paddingLeft="20dip"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                android:textSize="15sp" >
        </TextView>

        <TextView
                android:layout_width="80dip"
                android:layout_height="50dip"
                android:layout_gravity="center_vertical|center"
                android:gravity="center"
                android:text="@string/cal"
                android:textColor="#000000"
                android:textSize="19sp" >
        </TextView>
        <TextView
                android:id="@+id/setButton"
                android:layout_width="70dp"
                android:layout_height="35dip"
                android:layout_gravity="center_vertical|right"
                android:background="@color/teal_200"
                android:gravity="center"
                android:text="@string/set"
                android:textColor="#FFFFFF"
                android:textSize="15sp" >
        </TextView>
    </FrameLayout>

    <TabHost
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            <TabWidget
                    android:id="@android:id/tabs"
                    android:background="@color/yellow"
                    android:layout_width="match_parent"
                    android:layout_height="50dip"/>
            <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:background="@color/snow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                <ListView
                        android:id="@+id/list"
                        android:scrollbars="none"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="#0099ff"
                        android:dividerHeight="0.5dip" />


            </FrameLayout>
        </LinearLayout>
    </TabHost>


</LinearLayout>