<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightyellow"
            android:orientation="vertical" >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"  />
        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TableRow
                    android:gravity="center_horizontal" >

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event"
                        android:textColor="#004499"
                        android:textSize="20sp" />

                <EditText
                        android:id="@+id/edit_event"
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_event"
                        android:singleLine="true" />

            </TableRow>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            </TextView>
            <TableRow
                    android:gravity="center_horizontal" >
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="5sp"	/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/event_date"
                            android:textColor="#004499"
                            android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                    <Button
                            android:id="@+id/event_date"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:singleLine="true"/>


                </LinearLayout>
            </TableRow>
            <TableRow
                    android:gravity="center_horizontal" >
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="5sp"	/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/event_time"
                            android:textColor="#004499"
                            android:textSize="20sp" />

                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                    <Button
                            android:id="@+id/event_time"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:singleLine="true"/>


                </LinearLayout>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>